[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-jsc"
version = "0.0.1"
description = "JavaScript Challenge Provider for yt-dlp supporting many runtimes"
readme = "README.md"
requires-python = ">=3.9"
license = "Unlicense"
keywords = []
authors = [
  { name = "Simon Sawicki", email = "contact@grub4k.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/yt-dlp/yt-dlp-jsc#readme"
Issues = "https://github.com/yt-dlp/yt-dlp-jsc/issues"
Source = "https://github.com/yt-dlp/yt-dlp-jsc"

[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "dist"
out_dir = "yt_dlp_jsc"
commands = [
  "deno install",
  "deno task bundle",
]
artifacts = [
  "jsc.min.js",
  "lib.min.js",
]
