[build-system]
requires = [
  "hatchling>=1.27.0",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-ejs"
description = "External JavaScript for yt-dlp supporting many runtimes"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = "Unlicense AND MIT AND ISC"
license-files = ["LICENSE"]
keywords = ["yt-dlp"]
authors = [
  { name = "Simon Sawicki", email = "contact@grub4k.dev" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/yt-dlp/ejs#readme"
Issues = "https://github.com/yt-dlp/ejs/issues"
Source = "https://github.com/yt-dlp/ejs"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
dev-mode-dirs = [
    "yt_dlp_ejs",
    "dist",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github/**",
  "/src/yt/solver/test/players/*",
]

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_ejs"]

[tool.hatch.build.targets.editable]
artifacts = [
    "/dist/yt.solver.core.min.js",
    "/dist/yt.solver.lib.min.js",
]

[tool.hatch.build.hooks.vcs]
version-file = "yt_dlp_ejs/_version.py"

[tool.hatch.build.targets.wheel.hooks.custom]
